fix (этап 2): оптимизирован запросы в БД из CompilationService/getAllCompilatons() (main-svc)